--- a/config/locales/notification.en.yml
+++ b/config/locales/notification.en.yml
@@ -1,4 +1,5 @@
 
 en:
-  notification:
-    table_created : 'Table created !'
+  notifications:
+    table_created : Table created !
+    menu_created : The menu was successfully created !
