Spec + many others

--- a/config/locales/notification.en.yml
+++ b/config/locales/notification.en.yml
@@ -3,3 +3,6 @@ en:
   notifications:
     table_created : Table created !
     menu_created : The menu was successfully created !
+    fail: Problem in the form
+    menu:
+      updated: Succesfully updated
