--- a/config/locales/notification.en.yml
+++ b/config/locales/notification.en.yml
@@ -5,6 +5,8 @@ en:
     fail: Problem in the form
     destroy : Are you sur to delete 
     successfully_deleted : Successfully deleted !
+    availabilities:
+      must_create_menu : One menu, at least, must be created
     menu:
       updated: Successfully updated
       created : The menu was successfully created !
